outputs/tsp_aco-aco/2026-03-05_09-45-47/problem_iter8_response2.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 727
    refined[i, j] = refined[j, i] *= 1.2
                                  ^^
SyntaxError: invalid syntax
